Apply bottom padding to main container to fix spacing issue

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -13,9 +13,9 @@
     max-width: 100%;
     margin: 0;
   }
-  
+
   .container[role="main"] {
-    padding: 65px 0 0 0;
+    padding: 65px 0 65px 0;
   }
 
   // Main content spacing (replace with corresponding template class)
